tests/fixtures/LatestTests/VariableDeclarationTests/errors/reassignment_to_const_bool.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
const x:bool = true
x <- false

